// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings renders H1 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 1.125;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #111111;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #111111;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 1.125;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #111111;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #111111;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 32px;
    line-height: 36px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 45px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 48px;
    line-height: 54px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 31.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 27px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.125;
    font-weight: 500;
    letter-spacing: 0;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
}

.emotion-0 svg {
  fill: #111111;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 20.25px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 22.5px;
    font-weight: 500;
    letter-spacing: 0;
    padding: 0.5px 0px;
  }

  .emotion-0::before {
    content: '';
    margin-bottom: -0.2055em;
    display: block;
  }

  .emotion-0::after {
    content: '';
    margin-top: -0.2275em;
    display: block;
  }
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 1.125;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #111111;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 22.5px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #111111;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 1.125;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-0 svg {
  fill: #111111;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #FFFFFF;
  font-family: "Bitter",serif;
  font-size: 32px;
  line-height: 36px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #111111;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-0 svg {
  fill: #111111;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.2055em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.2275em;
  display: block;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;
